--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "bootstrap-vue": "^2.4.2",
         "jquery": "^3.4.1",
         "jquery-ui": "^1.12.1",
-        "vue": "^2.6.11"
+        "vue": "^2.6.11",
+        "vue-free-transform": "^1.0.11"
     }
 }
